Fixed some style bugs
Fix style bugs specifically unnecessary scrollbars in chrome and note container header bar moving on small device

--- a/src/components/navigation-drawer/navigation-drawer.css
+++ b/src/components/navigation-drawer/navigation-drawer.css
@@ -44,7 +44,7 @@
 
 .navigation-drawer__categories {
   flex: 1 0 3rem;
-  overflow-y: scroll;
+  overflow-y: auto;
   scrollbar-gutter: stable;
   padding: 0 1.5rem;
 }
