--- a/src/pages/constellation-page/constellation-page.css
+++ b/src/pages/constellation-page/constellation-page.css
@@ -52,7 +52,7 @@
   flex: 1 1 auto;
   position: relative;
   display: flex;
-  overflow: scroll;
+  overflow-y: auto;
 }
 
 .constellation-page__main__sidebar,
@@ -90,7 +90,7 @@
   display: flex;
   gap: 1rem;
   width: 100%;
-  overflow: scroll;
+  overflow-y: auto;
 }
 
 @media screen and (min-width: 600px) {
